<?xml version="1.0"?>
<package>
  <name>motor_angles_msg</name>
  <version>1.0.0</version>
  <license>TODO</license>
  <description>The motor angles message definition</description>

  <maintainer email="z5207471@student.unsw.edu.auo">z5207471@student.unsw.edu.au</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
